force-app/main/default/objects/pse__Expense_Limit_Rate__c/fields/CT_VAT_Percentage__c.field-meta.xml
<CustomField>
    <fullName>CT_VAT_Percentage__c</fullName>
    <label>VAT Percentage</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>