force-app/main/default/objects/pse__Expense_Limit_Rate__c/fields/pse__Type__c.field-meta.xml
<CustomField>
    <fullName>pse__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mileage - Petrol 1400cc or less</fullName>
            </value>
            <value>
                <fullName>Mileage - Petrol 1400cc - 2000cc</fullName>
            </value>
            <value>
                <fullName>Mileage - Petrol &gt; 2001cc</fullName>
            </value>
            <value>
                <fullName>Mileage - Diesel 1600cc or less</fullName>
            </value>
            <value>
                <fullName>Mileage - Diesel 1601cc - 2000cc</fullName>
            </value>
            <value>
                <fullName>Mileage - Diesel &gt; 2001cc</fullName>
            </value>
            <value>
                <fullName>Mileage - Electric Cars</fullName>
            </value>
            <value>
                <fullName>Auto Mileage</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Flights</fullName>
            </value>
            <value>
                <fullName>Train</fullName>
            </value>
            <value>
                <fullName>Taxi</fullName>
            </value>
            <value>
                <fullName>Other Travel</fullName>
            </value>
            <value>
                <fullName>Lunch Allowance</fullName>
            </value>
            <value>
                <fullName>Team meals/drinks</fullName>
            </value>
            <value>
                <fullName>Client meals/drinks</fullName>
            </value>
            <value>
                <fullName>Exam fees</fullName>
            </value>
            <value>
                <fullName>Subscriptions/memberships</fullName>
            </value>
            <value>
                <fullName>Motor expenses</fullName>
            </value>
            <value>
                <fullName>Computer Equipment</fullName>
            </value>
            <value>
                <fullName>Overnight stay meal allowance</fullName>
            </value>
            <value>
                <fullName>Other (please detail)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>